<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_ubicacion"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/ubicacion" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/perfil" />
        <item
            android:id="@+id/nav_inmuebles"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/inmuebles" />
        <item
            android:id="@+id/nav_agregar_inmueble"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Agregar inmueble" />
        <item
            android:id="@+id/nav_contratos"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/contratos" />
        <item
            android:id="@+id/nav_salir"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/salir" />
    </group>
</menu>