<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_ubicacion">

    <fragment
        android:id="@+id/nav_ubicacion"
        android:name="com.example.laboratorio3.ui.ubicacion.UbicacionFragment"
        android:label="@string/ubicacion"
        tools:layout="@layout/fragment_ubicacion" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.laboratorio3.ui.perfil.PerfilFragment"
        android:label="@string/perfil"
        tools:layout="@layout/fragment_perfil" >
        <action
            android:id="@+id/action_nav_perfil_to_nav_clave"
            app:destination="@id/nav_clave" />
    </fragment>

    <fragment
        android:id="@+id/nav_clave"
        android:name="com.example.laboratorio3.ui.perfil.ClaveFragment"
        android:label="@string/clave"
        tools:layout="@layout/fragment_clave" />

    <fragment
        android:id="@+id/nav_inmuebles"
        android:name="com.example.laboratorio3.ui.inmuebles.InmueblesFragment"
        android:label="@string/inmuebles"
        tools:layout="@layout/fragment_inmuebles" >
        <action
            android:id="@+id/action_nav_inmuebles_to_detalleinmuebleFragment"
            app:destination="@id/detalleinmuebleFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_salir"
        android:name="com.example.laboratorio3.ui.salir.SalirFragment"
        android:label="@string/salir"
        tools:layout="@layout/fragment_salir" />
    <fragment
        android:id="@+id/detalleinmuebleFragment"
        android:name="com.example.laboratorio3.ui.inmuebles.DetalleinmuebleFragment"
        android:label="Detalle del inmueble"
        tools:layout="@layout/fragment_detalleinmueble" >
        <action
            android:id="@+id/action_detalleinmuebleFragment_to_nav_inmuebles"
            app:destination="@id/nav_inmuebles" />
    </fragment>
    <fragment
        android:id="@+id/nav_agregar_inmueble"
        android:name="com.example.laboratorio3.ui.inmuebles.AgregarInmuebleFragment"
        android:label="fragment_agregar_inmueble"
        tools:layout="@layout/fragment_agregar_inmueble" />
</navigation>